--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <p class = 'keyInformation'><b>> Facts</b> </p>
             <p class = 'keyInformation'><b>> Personal memories</b> </p>
         </div>
-
+        <!--small change!-->
 </body>
 <script src = 'js/app.js'></script>
 
