added gradient bar

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@200&display=swap" rel="stylesheet">
 </head>
 <body>
-    
+
     <div id = 'settingsDiv'>
-  
+        <div id = 'rainbowGradient'></div>
         <p id = 'settingsText'>How to use:</p>
         <p id = 'message'>This family tree is <b> hand-coded</b> without any use of website builders, cause <span id = 'emphasisGradient'>they can't make cool gradients like this!</span> Hovering over the names would show you the pictures. </b> There may be a few glitches, but you get the general idea! <br><br> To view the code powering this, check this <a href="https://origamitician.github.io/familytree/js/app.js" target = '_blank'>link.</a> (Warning, code gets extremely messy!)</p>
         <hr>
